# newspaper

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.prod.yaml  docker-compose.yaml  pyproject.toml  requirements.txt
accounts/: admin.py  forms.py  tests.py
accounts/migrations/: 0001_initial.py
articles/: admin.py  models.py  urls.py  views.py
articles/migrations/: 0001_initial.py  0002_comment.py  0003_article_banner.py  0004_article_id_index.py
newspaper/: settings.py  urls.py
pages/: tests.py
templates/: base.html  home.html
templates/account/: login.html  logout.html  signup.html
templates/articles/: article_delete.html  article_detail.html  article_edit.html  article_list.html  article_new.html  search_results.html
templates/pages/: home.html
templates/registration/: login.html  password_reset.form.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html
